--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 	    <script src="rc-sdk.js" type="text/javascript"></script>
 	
 		<script src="ringcentral.js"></script>
-	    console.log('RC', RCSDK);
 
-		<div> Expedia</div>
+		<div> Expedia data loaded</div>
 		
 	</body>
 </html>
