--- a/map.html
+++ b/map.html
@@ -6,13 +6,13 @@
 
   <!-- Load Leaflet from CDN-->
   <link rel="stylesheet" href="http://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.css" />
-<script src="http://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.js"></script>
+  <script src="http://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.js"></script>
 
   <!-- Load Esri Leaflet from CDN -->
   <script src="http://cdn-geoweb.s3.amazonaws.com/esri-leaflet/1.0.0-rc.5/esri-leaflet.js"></script>
 
- <style>
-   body {margin:0;padding:0;}
+  <style>
+    body {margin:0;padding:0;}
     #map {position: absolute;top:0;bottom:0;right:0;left:0;}
   </style>
 </head>
@@ -21,11 +21,21 @@
 <div id="map"></div>
 
 <script>
+	gun.get(function(point){
+		console.log("map.html ran");
+		console.log(point);
+		
   var map = L.map('map').setView([37.75, -122.23], 10);
   console.log(L, L.esri);
   L.esri.basemapLayer('Topographic').addTo(map);
-</script>
+	// var results = new L.LayerGroup().addTo(map);
+	// 				
+	// 				  searchControl.on('results', function(data){
+	// 				    results.clearLayers();
+	// 				    for (var i = data.results.length - 1; i >= 0; i--) {
+	// 				      results.addLayer(L.marker(data.results[i].latlng));
 
+</script>
 
 </body>
 </html>
