--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha256.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/mode-ecb.js"></script>
 	    <script type="text/javascript" src="https://cdn.pubnub.com/pubnub-3.7.1.js"></script>
-	    <script src="rc-sdk.js" type="text/javascript"></script>
+	    <script src="js/rc-sdk.js" type="text/javascript"></script>
 	
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.scrollex.min.js"></script>
@@ -60,7 +60,6 @@
 	           
                 <input type="text" name="primusSearch" id="primusSearch" placeholder="What are you looking for in a hotel?" /><input type="submit" style="display: none;">
 	<script>
-               //var result=document.getElementById("primusSearch").value;
              $("#search").on("submit", function(event){
 				event.preventDefault();
 				var query = document.getElementById('primusSearch').value;
@@ -77,9 +76,7 @@
 			</header>
 
 		</section>	
-<!--	<div id="map"></div> 
-		<iframe src="./map.html" style="height: 100%; width: 100%; position: absolute; background: blue; display: block;"> BOOGA BOOGA</iframe>
-		-->
+
 		
 	</body>
 </html>
