working-with-points

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				event.preventDefault();
 				var query = document.getElementById('primusSearch').value;
 				expediaSearch(query);
+//				allPoint();
 				$('body').load('./map.html');
 			});
 
