--- a/map.html
+++ b/map.html
@@ -4,6 +4,9 @@
   <title>Esri Leaflet Quickstart</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
+  var gun = Gun(location.origin + '/gun');
+  var expedia = gun.load('primus/expedia');
+
   <!-- Load Leaflet from CDN-->
   <link rel="stylesheet" href="http://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.css" />
   <script src="http://cdn.jsdelivr.net/leaflet/0.7.3/leaflet.js"></script>
@@ -21,9 +24,14 @@
 <div id="map"></div>
 
 <script>
- 
-  var map = L.map('map').setView([37.75, -122.23], 10);
-  console.log(L, L.esri);
+
+  var map = L.map('map');
+	
+	
+  window.map = map;
+  map.setView([37.75, -122.23], 20);
+
+console.log(L, L.esri);
   L.esri.basemapLayer('Topographic').addTo(map);
 
 </script>
